--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,13 @@ packages = [{include = "yolo_nas_coco"}]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
-code-loader = "^1.0.11"
+code-loader = "1.0.17"
 tensorflow = "2.11.0"
 pillow = "^10.1.0"
 pycocotools = "^2.0.6"
 pyyaml = "^6.0.1"
 google-cloud-storage = "^2.13.0"
-code-loader-helpers = "^1.0.8"
+code-loader-helpers = "1.0.7"
 
 
 [build-system]
