--- a/yolonas/object_detection_config.yml
+++ b/yolonas/object_detection_config.yml
@@ -1,6 +1,9 @@
 dataset_path: /Users/ranhomri/tensorleap/data/coco-2017 # this foldr is expected to contain a json file for each subset and an `images` dir
+train_file: train.json
+val_file: val.json
 
-TRAIN_SIZE: 100
+
+TRAIN_SIZE: 800
 VAL_SIZE: 8
 TEST_SIZE: 8
 
