--- a/yolonas/object_detection_config.yaml
+++ b/yolonas/object_detection_config.yaml
@@ -1,7 +1,7 @@
-dataset_path: /home/tensorleap/tensorleap/data/coco-dataset/coco/
-unlabeled_dataset_path: /home/tensorleap/tensorleap/data/coco-dataset/coco/images/
-train_file: filtered_train.json
-val_file: filtered_train.json
+dataset_path: /home/ranhomri/tensorleap/data/coco
+unlabeled_dataset_path: /home/ranhomri/tensorleap/data/coco/images/unlabeled2017
+train_file: train.json
+val_file: val.json
 
 
 TRAIN_SIZE: 64
